# OpenCXX-CLI

./: .dockerignore  .gitignore  README.md  builder.sh  default.nix  devenv.nix  dockerfile  install-nix.sh  install.sh  meson.build  shell.nix
.github/workflows/: c-cpp.yml
include/: cli.h  colors.h  test.h
src/: cli.cpp  colors.cpp  meson.build  test.cpp  unitTests.cpp
